--- a/src/Components/Team/Member.module.css
+++ b/src/Components/Team/Member.module.css
@@ -1,44 +1,51 @@
-@keyframes slidedown{
-    0%{margin-left:-30px};
-    100%{margin-top: 0px};
+@keyframes slidedown {
+    0% {
+        margin-left: -30px
+    }
+    ;
+    100% {
+        margin-top: 0px
+    }
+    ;
 }
 
-.member{
+.member {
     width: 14rem;
-    margin:30px;
+    margin: 30px;
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 1);
     background-color: #0a1018;
     border: none !important;
     border-radius: 5px;
     animation-name: slidedown;
-    animation-duration:  1s;
+    animation-duration: 1s;
     animation-fill-mode: backwards;
     animation-timing-function: ease;
 }
-.member:nth-child(2){
+
+.member:nth-child(2) {
     animation-delay: 0.2s;
 }
 
- .member:nth-child(3){
+.member:nth-child(3) {
     animation-delay: 0.4s;
 }
 
- .teamCardBody{
-    border:none !important;
-    background-color:  #0a1018;
-    color:white;   
+.teamCardBody {
+    border: none !important;
+    background-color: #0a1018;
+    color: white;
 }
 
-.icon{
+.icon {
     text-align: center;
 }
 
-.icon a{
-    text-align:center;
+.icon a {
+    text-align: center;
     color: var(--light-shades);
 }
 
-i:hover{
+.member i:hover {
     color: lightcoral;
     transform: scale(1.3);
     transition: transform .2s;
