--- a/src/Components/Profilepage/profile.css
+++ b/src/Components/Profilepage/profile.css
@@ -46,8 +46,7 @@
   color: white;
   font-size: 20px;
   margin: 0;
-  padding: 0;
-  margin: 10px;
+  padding: 10px;
 }
 
 .profilepage .container .pro .pro-pic {
@@ -64,8 +63,9 @@
       grid-template-columns: 1fr 2fr;
 }
 
-.profilepage .container .pro .pro-pic img {
-  width: 120px;
+.profilepage .container .pro .pro-pic i {
+  width: 100px;
+  font-size: 65px;
   margin: auto;
 }
 
@@ -76,27 +76,36 @@
 }
 
 .profilepage .container .pro .pro-info {
-  display: -ms-grid;
-  display: grid;
-  margin: 40px 10px 0;
-  -ms-grid-columns: auto 1fr;
-      grid-template-columns: auto 1fr;
-      grid-template-areas: 'info1 info2';
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
+  margin: 40px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.profilepage .container .pro .pro-info .row {
+  padding-left: 35px;
 }
 
 .profilepage .container .pro .pro-info .pro-info1 {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: info1;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
 }
 
-.profilepage .container .pro .pro-info .pro-info2 {
-  -ms-grid-row: 1;
-  -ms-grid-column: 2;
-  grid-area: info2;
+.profilepage .container .pro .pro-info .pro-info1 i {
+  margin-right: 15px;
+  font-size: 23px;
+}
+
+.profilepage .container .pro .pro-info .pro-info2 p {
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .profilepage .container .rank {
@@ -202,8 +211,8 @@
   .profilepage .container .wrapper {
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
-    -ms-grid-rows: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
         grid-template-areas: 'pro pro' 'rank svg' 'eve eve';
     grid-row-gap: 10px;
     -webkit-box-align: center;
@@ -222,9 +231,6 @@
   .profilepage .container .pro .pro-pic .pro-username {
     font-size: 38px;
   }
-  .profilepage .container .pro .pro-info {
-    margin: 20px auto;
-  }
   .profilepage .container .svg {
     margin: 50px 0;
     width: 90%;
@@ -235,8 +241,8 @@
   .profilepage .container .wrapper {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-    -ms-grid-rows: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
         grid-template-areas: 'pro' 'eve' 'rank' 'svg';
     grid-row-gap: 25px;
   }
@@ -252,20 +258,27 @@
   .profilepage .container .pro .pro-pic .pro-username {
     font-size: 28px;
   }
-  .profilepage .container .pro .pro-info {
-    -ms-grid-columns: 27vw 50vw;
-        grid-template-columns: 27vw 50vw;
-    margin: 10px;
-  }
-  .profilepage .container .pro .pro-info .pro-info1 p {
-    margin-right: 0;
-  }
-  .profilepage .container .pro .pro-info .pro-info2 p {
-    margin-left: 0;
-  }
   .profilepage .container .svg {
     margin: 0;
     width: 100%;
+  }
+}
+
+@media (max-width: 576px) {
+  .profilepage .container .pro .pro-info .pro-info1 span {
+    display: none;
+  }
+}
+
+@media (max-width: 420px) {
+  .profilepage .container .pro p {
+    font-size: 18px;
+  }
+  .profilepage .container .pro .pro-info .row {
+    padding-left: 10px;
+  }
+  .profilepage .container .pro .pro-info .pro-info1 i {
+    margin-right: 0px;
   }
 }
 /*# sourceMappingURL=profile.css.map */
