--- a/src/Components/Profilepage/profile.scss
+++ b/src/Components/Profilepage/profile.scss
@@ -35,8 +35,8 @@
                 color: white;
                 font-size: 20px;
                 margin: 0;
-                padding: 0;
-                margin: 10px;
+                padding: 10px;
+                // margin: 10px;
                 // width: fit-content;
             }
             .pro-pic {
@@ -46,8 +46,9 @@
                 grid-area: pic;
                 display: grid;
                 grid-template-columns: 1fr 2fr;
-                img {
-                    width: 120px;
+                i {
+                    width: 100px;
+                    font-size: 65px;
                     margin: auto;
                 }
                 .pro-username {
@@ -57,17 +58,32 @@
                 }
             }
             .pro-info {
-                display: grid;
-                margin: 40px 10px 0;
-                grid-template-columns: auto 1fr;
-                grid-template-areas: 'info1 info2';
-                width: fit-content;
+                // display: grid;
+                margin: 40px 0;
+                // grid-template-columns: auto 1fr;
+                // grid-template-areas: 'info1 info2';
+                display: flex;
+                flex-direction: column;
+                .row {
+                    padding-left: 35px;
+                }
                 .pro-info1 {
-                    grid-area: info1;
-                    // text-align: right;
+                    // min-width: 130px;
+                    width: max-content;
+                    i {
+                        margin-right: 15px;
+                        font-size: 23px;
+                    }
                 }
                 .pro-info2 {
-                    grid-area: info2;
+                    // width: 150px;
+                }
+                .pro-info2 p {
+                    // background: lawngreen;
+                    display: block;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
             }
         }
@@ -155,7 +171,7 @@
         .container {
             .wrapper {
                 grid-template-columns: 1fr 1fr;
-                grid-template-rows: 1fr 1fr 1fr;
+                grid-template-rows: auto;
                 grid-template-areas: 'pro pro' 'rank svg' 'eve eve';
                 grid-row-gap: 10px;
                 align-items: center;
@@ -173,9 +189,6 @@
                         font-size: 38px;
                     }
                 }
-                .pro-info {
-                    margin: 20px auto;
-                }
             }
             .svg {
                 margin: 50px 0;
@@ -190,7 +203,7 @@
         .container {
             .wrapper {
                 grid-template-columns: 1fr;
-                grid-template-rows: 1fr 1fr 1fr;
+                grid-template-rows: auto;
                 grid-template-areas: 'pro' 'eve' 'rank' 'svg';
                 grid-row-gap: 25px;
             }
@@ -207,20 +220,48 @@
                         font-size: 28px;
                     }
                 }
-                .pro-info {
-                    .pro-info1 p {
-                        margin-right: 0;
-                    }
-                    .pro-info2 p {
-                        margin-left: 0;
-                    }
-                    grid-template-columns: 27vw 50vw;
-                    margin: 10px;
-                }
             }
             .svg {
                 margin: 0;
                 width: 100%;
+            }
+        }
+    }
+}
+
+@media(max-width: 576px) {
+    .profilepage {
+        .container {
+            .pro {
+                .pro-info {
+                    .pro-info1 {
+                        span {
+                            display: none;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media(max-width: 420px) {
+    .profilepage {
+        .container {
+            .pro {
+                p {
+                    font-size: 18px;
+                }
+                .pro-info {
+                    .row {
+                        padding-left: 10px;
+                    }
+                    .pro-info1 {
+                        i {
+                            margin-right: 0px;
+                        }
+                    }
+                }
             }
         }
     }
