--- a/src/Components/Footer/footer.module.css
+++ b/src/Components/Footer/footer.module.css
@@ -6,7 +6,7 @@
 
 .footer {
     justify-content: center;
-    display: flex;
+    display: grid;
     background: #262626;
     padding: 10px 0;
     color: #fff;
