--- a/src/Components/Profilepage/profile.scss
+++ b/src/Components/Profilepage/profile.scss
@@ -6,15 +6,17 @@
 }
 
 .profilepage {
+    padding-top: 30px;
     .container {
-        margin-top: 50px;
+        margin-top: 20px;
         margin-bottom: 50px;
         .wrapper {
+            transform: scale(0.95);
             display: grid;
             justify-content: center;
             align-items: flex-start;
             grid-template-columns: 1fr 1fr;
-            grid-template-rows: 1fr 1fr;
+            // grid-template-rows: 1fr 1fr;
             grid-template-areas: 'pro eve' ' rank svg';
             grid-column-gap: 50px;
             grid-row-gap: 40px;
@@ -28,7 +30,7 @@
             display: grid;
             justify-content: space-between;
             grid-template-columns: 1fr;
-            grid-template-rows: auto auto;
+            grid-template-rows: 1fr 3fr;
             grid-template-areas: 'pic' 'info';
             grid-area: pro;
             p {
@@ -45,15 +47,17 @@
                 border-radius: 20px;
                 grid-area: pic;
                 display: grid;
+                padding: 10px 0;
                 grid-template-columns: 1fr 2fr;
                 i {
                     width: 100px;
-                    font-size: 65px;
+                    font-size: 60px;
                     margin: auto;
                 }
                 .pro-username {
                     color: #0c3264;
-                    font-size: 45px;
+                    font-size: 30px;
+                    font-weight: 500;
                     margin: auto 0;
                 }
             }
@@ -123,20 +127,41 @@
         .eve {
             font-size: 20px;
             grid-area: eve;
-            // width: fit-content;
-            // margin-top: 50px;
+            height: 100%;
+            display: grid;
+            grid-template-rows: 1fr 3fr;
             background-color: #0c3264;
             box-shadow: 0 -2px 15px rgba(0, 0, 0, 1);
             border-radius: 20px;
             padding: 30px 20px;
-            justify-content: space-between;
+            .eve-title {
+                background-color: white;
+                box-shadow: 0 0px 5px rgba(0, 0, 0, 1);
+                border-radius: 20px;
+                display: grid;
+                grid-template-columns: 1fr 2fr;
+                padding: 7px 0;
+                i {
+                    font-size: 60px;
+                    margin: auto auto;
+                }
+                .reg-eve {
+                    color: #0c3264;
+                    font-size: 30px;
+                    font-weight: 500;
+                    margin: auto 0;
+                }
+            }
             .title {
                 color: white;
                 text-align: center;
-                font-size: 25px;
+                font-size: 28px;
+            }
+            .table-container {
+                display: flex;
             }
             table {
-                margin: 0 auto;
+                margin: auto;
                 background-color: #0c3264;
                 th {
                     margin: auto;
@@ -158,6 +183,22 @@
             img {
                 width: 80%;
                 margin: auto;
+            }
+        }
+    }
+    .logout-wrap {
+        display: flex;
+        justify-content: center;
+        margin: 20px;
+        margin-top: 40px;
+        button.logout {
+            padding: 10px 20px;
+            background-color: rgb(238, 72, 72);
+            margin: auto;
+            font-weight: 500;
+            color: white;
+            &:hover {
+                background-color: rgb(245, 63, 63);
             }
         }
     }
