--- a/src/index.css
+++ b/src/index.css
@@ -1,60 +1,56 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 body {
-  margin: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    margin: 0;
+    /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
     /*font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !important;*/
     font-family: 'Montserrat', sans-serif !important;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
     overflow-y: scroll;
     overflow-x: hidden;
-
     /* position: absolute;
     top: 10px;
     left: 20px;
     bottom: 10px;
     right: 0;
     padding: 30px;  */
-
 }
 
 html {
-  overflow: auto;
+    overflow: auto;
 }
 
 
 /* Scrollbar Styling */
+
 ::-webkit-scrollbar {
-  width: 10px;
+    width: 10px;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #ebebeb;
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
+    background-color: #ebebeb;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-  background: #6d6d6d; 
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #6d6d6d;
 }
 
 code {
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
-
 :root {
-  --light-shades: #0f8edf;
-  --light-accent: #6eabce;
-  --main-brand: #5a6485;
-  /* --dark-accent: #b76572;
+    --light-shades: #0f8edf;
+    --light-accent: #6eabce;
+    --main-brand: #5a6485;
+    /* --dark-accent: #b76572;
   --dark-shades: #3859ab; */
-  --lighter-accent: #f0f0f1;
-  --dark-shade: #0c0c0c;
-  
+    --lighter-accent: #f0f0f1;
+    --dark-shade: #0c0c0c;
 }
