--- a/src/Components/Footer/footer.module.css
+++ b/src/Components/Footer/footer.module.css
@@ -10,32 +10,36 @@
     background: #262626;
     padding: 10px 0;
     color: #fff;
+    bottom: 0%;
 }
 
 .iconfb {
-    background-color: blue;
+    background-color: lightcyan;
     border-radius: 50%;
-    padding: 5px 15px;
+    padding: 7px 15px;
     font-size: 25px;
     margin: 0 3px;
+   
 }
 
 .iconlink {
-    background-color: blue;
+    background-color: lightcyan;
     border-radius: 50%;
     padding: 8px 0;
     padding-right: 12px;
     font-size: 25px;
     margin: 0 3px;
+    padding-left: 5px;
 }
 
 .iconinsta {
-    background-color: blue;
+    background-color: lightcyan;
     border-radius: 50%;
     padding: 8px 0;
     padding-right: 12px;
     font-size: 25px;
     margin: 0 3px;
+    padding-left: 5px;
 }
 
 @media (max-width: 600px) {
