--- a/src/Components/HomeComponent/HomeComponent.module.css
+++ b/src/Components/HomeComponent/HomeComponent.module.css
@@ -6,6 +6,11 @@
     margin: 40px 0 ;
 }
 
+/* a:visited{
+    color:transparent !important;
+} */
+
+
 @media(max-width: 600px){
     .body{
         padding: 0;
