--- a/src/Components/Navbar/NavBar.css
+++ b/src/Components/Navbar/NavBar.css
@@ -20,9 +20,9 @@
     top: 0%;
 }
 
-a:visited {
+/* a:visited {
     color: white;
-}
+} */
 
 @media only screen and (min-width:769px) {
     /* .profile {
