--- a/src/Components/EventsComponent/animation.css
+++ b/src/Components/EventsComponent/animation.css
@@ -1,23 +1,27 @@
 .eve-anim {
+  height: 100vh;
+}
+
+.eve-anim .container {
   margin: 0 auto 40px;
   display: table;
 }
 
-.eve-anim .st0 {
+.eve-anim .container .st0 {
   fill: #23262C;
   stroke: #171A1E;
   stroke-width: 5;
   stroke-miterlimit: 10;
 }
 
-.eve-anim .st1 {
+.eve-anim .container .st1 {
   fill: #344156;
   stroke: #121316;
   stroke-width: 5;
   stroke-miterlimit: 10;
 }
 
-.eve-anim .st2 {
+.eve-anim .container .st2 {
   opacity: 0.77;
   fill: none;
   stroke: #2F343F;
@@ -27,7 +31,7 @@
   enable-background: new;
 }
 
-.eve-anim .st3 {
+.eve-anim .container .st3 {
   opacity: 0.32;
   fill: #1B1E25;
   stroke: #49535E;
@@ -36,32 +40,32 @@
   enable-background: new;
 }
 
-.eve-anim .st4 {
+.eve-anim .container .st4 {
   fill: #12161E;
   stroke: #3F454F;
   stroke-width: 5;
   stroke-miterlimit: 10;
 }
 
-.eve-anim .st5 {
+.eve-anim .container .st5 {
   opacity: 0.7;
   fill: url(#SVGID_1_);
   enable-background: new;
 }
 
-.eve-anim .st6 {
+.eve-anim .container .st6 {
   fill: #12161E;
 }
 
-.eve-anim .st7 {
+.eve-anim .container .st7 {
   fill: #414751;
 }
 
-.eve-anim .st8 {
+.eve-anim .container .st8 {
   fill: none;
 }
 
-.eve-anim .st9 {
+.eve-anim .container .st9 {
   opacity: 0.74;
   fill: #1B1E25;
   stroke: #49535E;
@@ -69,58 +73,58 @@
   enable-background: new;
 }
 
-.eve-anim .st10 {
+.eve-anim .container .st10 {
   fill: #FF3C00;
 }
 
-.eve-anim .st11 {
+.eve-anim .container .st11 {
   opacity: 0.32;
 }
 
-.eve-anim .st12 {
+.eve-anim .container .st12 {
   fill: #1B1E25;
   stroke: #49535E;
   stroke-miterlimit: 10;
 }
 
-.eve-anim .st13 {
+.eve-anim .container .st13 {
   opacity: 0.42;
   fill: #000510;
   enable-background: new;
 }
 
-.eve-anim .st14 {
+.eve-anim .container .st14 {
   fill: #931429;
 }
 
-.eve-anim .st15 {
+.eve-anim .container .st15 {
   fill: #253E5B;
 }
 
-.eve-anim .st16 {
+.eve-anim .container .st16 {
   opacity: 0.2;
   fill: url(#SVGID_2_);
   enable-background: new;
 }
 
-.eve-anim .st17 {
+.eve-anim .container .st17 {
   fill: #2B3647;
 }
 
-.eve-anim .st18 {
+.eve-anim .container .st18 {
   opacity: 0.33;
 }
 
-.eve-anim .st19 {
+.eve-anim .container .st19 {
   fill: #8797AD;
 }
 
-.eve-anim .st20 {
+.eve-anim .container .st20 {
   fill: none;
   stroke: none;
 }
 
-.eve-anim #svg {
+.eve-anim .container #svg {
   width: 825px;
   margin: 0 auto;
   display: table;
@@ -128,22 +132,22 @@
   z-index: 1;
 }
 
-.eve-anim .inlinesvg .fallback {
+.eve-anim .container .inlinesvg .fallback {
   display: none;
   visibility: hidden;
 }
 
-.eve-anim .no-inlinesvg .fallback {
+.eve-anim .container .no-inlinesvg .fallback {
   width: 500px;
   height: 500px;
   display: block;
 }
 
-.eve-anim .no-inlinesvg .fallback img {
+.eve-anim .container .no-inlinesvg .fallback img {
   width: 100%;
 }
 
-.eve-anim h2 {
+.eve-anim .container h2 {
   position: relative;
   z-index: 100;
   color: #28384F;
@@ -152,7 +156,7 @@
   margin: 0;
 }
 
-.eve-anim .dialog {
+.eve-anim .container .dialog {
   color: #BEEAE6;
   letter-spacing: 0.03em;
   position: absolute;
@@ -164,32 +168,32 @@
   width: 180px;
 }
 
-.eve-anim .dialog h3 {
+.eve-anim .container .dialog h3 {
   margin-bottom: 10px;
 }
 
-.eve-anim .dialog p {
+.eve-anim .container .dialog p {
   padding-top: 0px;
   margin-top: 0px;
 }
 
-.eve-anim .dialog p.smaller {
+.eve-anim .container .dialog p.smaller {
   font-size: 14px;
   line-height: 1.25em;
 }
 
-.eve-anim .dialog {
+.eve-anim .container .dialog {
   visibility: hidden;
 }
 
-.eve-anim .sub {
+.eve-anim .container .sub {
   font-size: 60%;
   vertical-align: sub;
 }
 
-.eve-anim .button,
-.eve-anim .button:visited,
-.eve-anim .button:active {
+.eve-anim .container .button,
+.eve-anim .container .button:visited,
+.eve-anim .container .button:active {
   z-index: 2000;
   position: absolute;
   background: #23262C;
@@ -214,13 +218,13 @@
   transition: all 0.5s ease;
 }
 
-.eve-anim .button:hover,
-.eve-anim .button:visited:hover,
-.eve-anim .button:active:hover {
+.eve-anim .container .button:hover,
+.eve-anim .container .button:visited:hover,
+.eve-anim .container .button:active:hover {
   background: #2e323a;
 }
 
-.eve-anim #slider {
+.eve-anim .container #slider {
   opacity: 0.6;
   position: absolute;
   margin: 540px auto 50px;
@@ -232,7 +236,7 @@
   border: 1px solid rgba(102, 102, 102, 0.5);
 }
 
-.eve-anim .ui-slider-handle {
+.eve-anim .container .ui-slider-handle {
   border-radius: 2px;
   background: #7A9293;
   position: absolute;
@@ -243,7 +247,7 @@
   outline: none;
 }
 
-.eve-anim .money-sm {
+.eve-anim .container .money-sm {
   width: 90px;
   position: absolute;
   left: 8%;
@@ -251,70 +255,70 @@
 }
 
 @media (max-width: 475px) {
-  .eve-anim #svg,
-  .eve-anim .fallback {
+  .eve-anim .container #svg,
+  .eve-anim .container .fallback {
     top: 320px;
   }
 }
 
 @media (max-width: 825px) {
-  .eve-anim .dialog {
+  .eve-anim .container .dialog {
     left: 5%;
     text-align: center;
     width: 90%;
     display: table;
     margin: 0 !important;
   }
-  .eve-anim .button,
-  .eve-anim .button:visited,
-  .eve-anim .button:active {
+  .eve-anim .container .button,
+  .eve-anim .container .button:visited,
+  .eve-anim .container .button:active {
     margin-top: 230px;
     left: 9%;
   }
-  .eve-anim #svg,
-  .eve-anim .fallback {
+  .eve-anim .container #svg,
+  .eve-anim .container .fallback {
     top: 270px !important;
     width: 100%;
     left: 6%;
   }
-  .eve-anim container {
+  .eve-anim .container container {
     width: 100%;
   }
-  .eve-anim #slider {
+  .eve-anim .container #slider {
     margin: 120px auto 20px;
     width: 90%;
     left: 6%;
   }
-  .eve-anim h2 {
+  .eve-anim .container h2 {
     padding-top: 30px;
     width: 100%;
     text-align: center;
   }
-  .eve-anim #box,
-  .eve-anim .money-lg,
-  .eve-anim .million {
+  .eve-anim .container #box,
+  .eve-anim .container .money-lg,
+  .eve-anim .container .million {
     display: none;
   }
 }
 
 @media (min-width: 826px) {
-  .eve-anim .money-sm {
+  .eve-anim .container .money-sm {
     display: none;
   }
-  .eve-anim .button,
-  .eve-anim .button:visited,
-  .eve-anim .button:active {
+  .eve-anim .container .button,
+  .eve-anim .container .button:visited,
+  .eve-anim .container .button:active {
     margin-top: 400px;
     left: 64.95%;
   }
-  .eve-anim #slider {
+  .eve-anim .container #slider {
     margin: 540px auto 50px;
     width: 510px;
   }
-  .eve-anim .container {
+  .eve-anim .container .container {
     width: 825px;
   }
-  .eve-anim h2 {
+  .eve-anim .container h2 {
     width: 120px;
     padding-top: 25px;
   }
