--- a/src/Components/Navbar/NavBar.css
+++ b/src/Components/Navbar/NavBar.css
@@ -20,6 +20,7 @@
     top: 0%;
 }
 
+
 /* a:visited {
     color: white;
 } */
@@ -100,6 +101,10 @@ a:hover {
 }
 
 .nav-link {
+    color: white;
+}
+
+.nav-link:hover {
     color: white;
 }
 
