--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ html {
 }
 
 code {
-    font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    /* font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; */
 }
 
 :root {
@@ -51,7 +51,6 @@ code {
     --main-brand: #5a6485;
     /* --dark-accent: #b76572;
   --dark-shades: #3859ab; */
-
-  --lighter-accent: #f0f0f1;
-  --dark-shade: #0c0c0c;
+    --lighter-accent: #f0f0f1;
+    --dark-shade: #0c0c0c;
 }
