--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,19 @@
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-  /* background-image: url(./assests/img/bg1.jpg); */
-  background-color: var(--dark-shade);
-  overflow: hidden;
+    /* background-image: url(./assests/img/bg1.jpg); */
+    background-color: var(--dark-shade);
+    overflow: hidden;
+    font-family: 'Montserrat', sans-serif !important;
+}
+
+samp {
+    font-family: 'Montserrat', sans-serif !important;
+}
+
+html {
+    scroll-padding: 100px;
 }
