--- a/src/Components/ContactComponent/contact.css
+++ b/src/Components/ContactComponent/contact.css
@@ -1,172 +1,175 @@
 @import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
-.cont{
+.cont {
     min-height: 100vh;
-    margin-top:-30px;
+    margin-top: -30px;
 }
 
-.container-fluid{
+.container-fluid {
     padding: 0 !important;
 }
 
-.tab{
+.tab {
     align-items: center;
     display: flex;
     justify-content: center;
-  
 }
-.select h3 
-{
-    border:none!important;
-    border-bottom:2px solid #add8e6 !important;
-    color:#add8e6 ! important;
- 
+
+.select h3 {
+    border: none!important;
+    border-bottom: 2px solid #add8e6 !important;
+    color: #add8e6 ! important;
 }
-@media(max-width:425px){
-    .tab h3{
-    border-bottom:1px solid #ccc;
-    border-radius:20px;
+
+@media(max-width:425px) {
+    .tab h3 {
+        border-bottom: 1px solid #ccc;
+        border-radius: 20px;
     }
-  
 }
-.tab h3{
+
+.tab h3 {
     /* background-color: #ccc; */
-    
     padding: 5px 12px;
-    color:white;
-    font-family: 'Alata', sans-serif;
+    color: white;
+    /* font-family: 'Alata', sans-serif; */
     font-weight: bold;
-    font-size:20px;
-    padding:10px;
-    cursor:pointer;
- 
+    font-size: 20px;
+    padding: 10px;
+    cursor: pointer;
 }
-.tab h3:hover{
-color:#add8e6;
+
+.tab h3:hover {
+    color: #add8e6;
 }
-.head{
-    
-    margin-top:5vh;
+
+.head {
+    margin-top: 5vh;
     justify-content: center;
-    width:100%;
-   
+    width: 100%;
 }
-.content{
+
+.content {
     justify-content: center;
 }
 
-@keyframes slidedown{
-    0%{margin-left:-30px};
-    100%{margin-top: 0px};
+@keyframes slidedown {
+    0% {
+        margin-left: -30px
+    }
+    ;
+    100% {
+        margin-top: 0px
+    }
+    ;
 }
 
 .contacts {
-   margin:30px;
-   width:14rem;
-   box-shadow: 0 -2px 10px rgba(0, 0, 0, 1);
-   /* background-color: #0a1018 !important; */
-   background-color: #192b42 !important;
-   border: none !important;
-   border-radius: 5px ;
-   font-family: 'Alata', sans-serif;
-  animation-name: slidedown;
-  animation-duration:  1s;
-  animation-fill-mode: backwards;
-  background-color: #0a1018;
-  animation-timing-function: ease;
+    margin: 30px;
+    width: 14rem;
+    box-shadow: 0 -2px 10px rgba(0, 0, 0, 1);
+    /* background-color: #0a1018 !important; */
+    background-color: #192b42 !important;
+    border: none !important;
+    border-radius: 5px;
+    /* font-family: 'Alata', sans-serif; */
+    animation-name: slidedown;
+    animation-duration: 1s;
+    animation-fill-mode: backwards;
+    background-color: #0a1018;
+    animation-timing-function: ease;
 }
 
-.contacts:nth-child(2){
+.contacts:nth-child(2) {
     animation-delay: 0.2s;
 }
 
-.contacts:nth-child(3){
+.contacts:nth-child(3) {
     animation-delay: 0.4s;
 }
-.card .card-body{
-    border:none !important;
-   
-  
+
+.card .card-body {
+    border: none !important;
 }
-.contacts .card-body{
+
+.contacts .card-body {
     background-color: #192b42;
-    color:white;   
+    color: white;
 }
-.card:hover{
+
+.card:hover {
     transform: scale(1.05);
     transition: transform .2s;
 }
-.card-title{
+
+.card-title {
     text-align: center;
-  
-}
-.contacts-img  {
-    height:10rem;
-    opacity: 0.9;
-   width:10rem !important;
-    margin:auto;
-    margin-top: 20px;
-    border-radius:50% !important;
-    border:2px solid #1e90ff;
-    padding:5px;
 }
 
-.address{
-    color:#40497a;
-    font-family: 'Alata', sans-serif;
+.contacts-img {
+    height: 10rem;
+    opacity: 0.9;
+    width: 10rem !important;
+    margin: auto;
+    margin-top: 20px;
+    border-radius: 50% !important;
+    border: 2px solid #1e90ff;
+    padding: 5px;
+}
+
+.address {
+    color: #40497a;
+    /* font-family: 'Alata', sans-serif; */
     text-align: center;
 }
-.addr{
+
+.addr {
     justify-content: center;
-   margin-top:5vh;
+    margin-top: 5vh;
 }
- .feedback{
-    width:500px;
-    margin:auto;
-    margin-top:30px;
-    color:#fff;
+
+.feedback {
+    width: 500px;
+    margin: auto;
+    margin-top: 30px;
+    color: #fff;
     /* font-family: 'Alata', sans-serif; */
 }
-.feedback label{
-    color:white;
+
+.feedback label {
+    color: white;
     font-size: 18px;
 }
-.feedback button[type="submit"]
-{
-    margin-left:50%;
+
+.feedback button[type="submit"] {
+    margin-left: 50%;
     border-radius: 19px;
     background-color: #ccc;
-    width:200px;
-    transform: translate(-50%,0);
+    width: 200px;
+    transform: translate(-50%, 0);
 }
 
-.form-control{
-
-    padding:5px !important;
-  
+.form-control {
+    padding: 5px !important;
 }
 
-
-@media only screen and (max-width:425px)
-{
-    .feedback{
-        width:300px;
+@media only screen and (max-width:425px) {
+    .feedback {
+        width: 300px;
     }
 }
-@media only screen and (max-width:768px)
-{
-    .tab h3{
-        font-size:16px;
-        
-      } 
- 
+
+@media only screen and (max-width:768px) {
+    .tab h3 {
+        font-size: 16px;
+    }
 }
 
- .team{
-    margin-left:25%;
+.team {
+    margin-left: 25%;
     border-radius: 19px !important;
     background-color: #ccc !important;
-    width:150px;
-    height:30px;
-    padding:0   !important;
+    width: 150px;
+    height: 30px;
+    padding: 0 !important;
     margin-top: -10px;
 }
