--- a/src/Components/Team/Member.module.css
+++ b/src/Components/Team/Member.module.css
@@ -1,34 +1,40 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
-@keyframes slidedown{
-    0%{margin-left:-30px};
-    100%{margin-top: 0px};
+@keyframes slidedown {
+    0% {
+        margin-left: -30px
+    }
+    ;
+    100% {
+        margin-top: 0px
+    }
+    ;
 }
-.image{
-    height:10rem;
+
+.image {
+    height: 10rem;
     opacity: 0.9;
-   width:10rem;
-    margin:auto;
+    width: 10rem;
+    margin: auto;
     margin-top: 20px;
-    border-radius:50%;
-    border:2px solid #1e90ff;
-    padding:5px;
+    border-radius: 50%;
+    border: 2px solid #1e90ff;
+    padding: 5px;
 }
-.teamCardBody h5{
-   /* background-color: rgb(14, 15, 15); */
-    padding:2px;
-    border-radius:3px;
-    
+
+.teamCardBody h5 {
+    /* background-color: rgb(14, 15, 15); */
+    padding: 2px;
+    border-radius: 3px;
 }
-.member{
+
+.member {
     width: 14rem;
     margin: 30px;
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 1);
     background-color: #192b42;
     border: none !important;
     /* border-radius: 7px; */
-   font-family:  'Alata', sans-serif;
-  
+    /* font-family:  'Alata', sans-serif; */
     animation-name: slidedown;
     animation-duration: 1s;
     animation-fill-mode: backwards;
@@ -43,12 +49,11 @@
     animation-delay: 0.4s;
 }
 
-
- .teamCardBody{
-    border:none !important;
+.teamCardBody {
+    border: none !important;
     /* background-color:  #0a1018; */
-    color:white;  
-    color:rgba(255, 255, 255, 0.836); 
+    color: white;
+    color: rgba(255, 255, 255, 0.836);
 }
 
 .icon {
