--- a/src/Components/Team/newmem.css
+++ b/src/Components/Team/newmem.css
@@ -88,7 +88,7 @@
     }
 }
 
-.image {
+.our-team .image {
     height: 14rem;
     opacity: 0.9;
     width: 15rem;
@@ -99,7 +99,7 @@
     padding: 5px;
 }
 
-i:hover {
+.our-team i:hover {
     color: #0f8edf;
     transform: scale(1.5);
     transition: transform .2s;
