--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,21 @@ body {
     font-family: 'Montserrat', sans-serif !important;
 }
 
+button {
+    outline: none;
+    border: none;
+}
+
+button:active {
+    outline: none;
+    border: none;
+}
+
+button:focus {
+    outline: none;
+    border: none;
+}
+
 samp {
     font-family: 'Montserrat', sans-serif !important;
 }
