--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ body {
     /* background-image: url(./assests/img/bg1.jpg); */
     background-color: var(--dark-shade);
     overflow: hidden;
+    overflow-x: hidden;
     font-family: 'Montserrat', sans-serif !important;
 }
 
