--- a/src/Components/HomeComponent/Aboutus/Aboutus.module.css
+++ b/src/Components/HomeComponent/Aboutus/Aboutus.module.css
@@ -1,33 +1,41 @@
-
-
-
-.img_size_cred{
-    width: 30%;
-    margin-left: 90px;
+.AboutusContainer {
+    margin-top: 50px;
 }
 
-.img_size_pisb{
+.img_size_cred {
+    width: 30%;
+}
+
+.img_size_pisb {
     width: 50%;
 }
 
-.content{
+.content {
     padding: 20px;
     text-align: justify;
 }
 
-.mid{
+.mid {
     text-align: center;
 }
 
-.credenz{
+.credenz {
     /* background-color: #fafafa; */
     /* background-color: #e5ebf091; */
-
+    margin: 50px 0;
 }
 
-.pisb{
+.pisb {
     /* background-color: #e5ebf091; */
+    margin: 50px 0;
 }
+
+.logo_pos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 /* 
 .content {
@@ -47,6 +55,8 @@
     tab-size: 4;
     position: relative;
 } */
+
+
 /* @keyframes scanline {
     from {
         background-position: 0 -3.3em
@@ -74,6 +84,7 @@
 .content::after {
     content: "";
 }
+
 .content {
     display: block;
     overflow: auto;
@@ -82,24 +93,28 @@
     overflow: hidden;
 }
 
+@media (max-width:1300px) {
+    .img_size_cred {
+        width: 13vw;
+    }
+    .img_size_pisb {
+        width: 13vw;
+    }
+}
 
-@media (max-width:600px){
-    .img_size_cred{
-        width: 70%;
-        margin-left: 0%;
+@media (max-width:600px) {
+    .img_size_cred {
+        width: 30vw;
+        margin: 50px;
     }
-    
-    .img_size_pisb{
-        width: 100%;
+    .img_size_pisb {
+        width: 50vw;
+        margin: 50px;
     }
-    
-    .logo_pos{
+    .logo_pos {
         order: 1;
     }
-
-    .content{
+    .content {
         order: 2;
     }
-
-
 }
