--- a/src/Components/Team/newmem.css
+++ b/src/Components/Team/newmem.css
@@ -70,7 +70,7 @@
 .our-team .title {
     font-size: 22px;
     font-weight: 700;
-    color: #faa13b;
+    color:#b3d7ff;
     text-transform: capitalize;
     margin: 0 0 8px 0;
 }
