--- a/src/Components/HomeComponent/HomeAnimation/AnimationSVGs/CredenzEye.css
+++ b/src/Components/HomeComponent/HomeAnimation/AnimationSVGs/CredenzEye.css
@@ -2,7 +2,7 @@
     fill: #e3b1b1;
 }
 
-#credenzeye_svg__Layer_1 {
+.evePage #credenzeye_svg__Layer_1 {
     border-radius: 50%;
     background: #e1edf3;
     margin: auto;
